# swift-subprocess

./: .gitignore  .licenseignore  .spi.yml  .swift-format  .swift-version  CMakeLists.txt  CODE_OF_CONDUCT.md  PIPE_CONFIGURATION_USAGE.md  Package.swift  Package@swift-6.0.swift  Proposal.md  README.md
.github/workflows/: pull_request.yml
Sources/: CMakeLists.txt
Sources/Subprocess/: API.swift  AsyncBufferSequence.swift  Atomic.swift  Buffer.swift  CMakeLists.txt  Configuration.swift  Error.swift  Execution.swift  ExecutionContext.swift  Locked.swift  PipeConfiguration.swift  Result.swift  Span+Subprocess.swift  SubprocessOutputSequence.swift  Teardown.swift  Thread.swift
Sources/Subprocess/Documentation.docc/: Subprocess.md
Sources/Subprocess/Documentation.docc/reference/: Arguments.md  Buffer.md  Configuration.md  Environment.Key.md  Environment.md  ErrorOutputProtocol.md  Executable.md  Execution.md  ExecutionResult.md  InputProtocol.md  OutputProtocol.md  PlatformOptions.md  ProcessIdentifier.md  Signal.md  StandardInputWriter.md  SubprocessError.Code.md  SubprocessError.WindowsError.md  SubprocessError.md  SubprocessOutputSequence.StringSequence.md  SubprocessOutputSequence.md  TerminationStatus.md
Sources/Subprocess/IO/: AsyncIO+Darwin.swift  AsyncIO+Dispatch.swift  AsyncIO+KQueue.swift  AsyncIO+Linux.swift  AsyncIO+Unix.swift  AsyncIO+Windows.swift  AsyncIO.swift  Input.swift  LockedState.swift  Output.swift
Sources/Subprocess/SubprocessFoundation/: Input+Foundation.swift  Output+Foundation.swift  Span+SubprocessFoundation.swift
Sources/_SubprocessCShims/: CMakeLists.txt  process_shims.c
Sources/_SubprocessCShims/include/: module.modulemap  process_shims.h  target_conditionals.h
Tests/SubprocessTests/: AsyncIOTests.swift  ConfigurationIntrospectionTests.swift  DarwinTests.swift  ExecutionContextTests.swift  IntegrationTests.swift  LinterTests.swift  LinuxTests.swift  PipeConfigurationTests.swift  PlatformConformance.swift  ProcessControlTests.swift  ProcessMonitoringTests.swift  ProtocolConformanceTests.swift  StreamingBehaviorTests.swift  SubprocessTests+Darwin.swift  SubprocessTests+Linting.swift  SubprocessTests+Linux.swift  SubprocessTests+Unix.swift  SubprocessTests+Windows.swift  TestSupport.swift  UnixTests.swift  WindowsTests.swift
Tests/TestResources/: TestResources.swift
Tests/TestResources/Resources/: getgroups.swift  windows-tester.ps1
cmake/modules/: CMakeLists.txt  EmitSwiftInterface.cmake  InstallExternalDependencies.cmake  InstallSwiftInterface.cmake  PlatformInfo.cmake  SwiftSubprocessConfig.cmake.in
scripts/: prep-linux-swift.sh  test-using-qemu.sh
